--- a/notebooks/produce_stats2.html
+++ b/notebooks/produce_stats2.html
@@ -7499,6 +7499,62 @@ a.anchor-link {
 </div>
 </div>
 </div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="n">shares_pop</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span>
+    <span class="s2">"../data/tract_population_shares.csv"</span><span class="p">,</span>
+    <span class="n">usecols</span><span class="o">=</span><span class="p">[</span>
+        <span class="s2">"state"</span><span class="p">,</span>
+        <span class="s2">"county"</span><span class="p">,</span>
+        <span class="s2">"tract"</span><span class="p">,</span>
+        <span class="s2">"Share of White Population"</span><span class="p">,</span>
+        <span class="s2">"Share of Black Population"</span><span class="p">,</span>
+        <span class="s2">"Share of American Indian and Alaska Native Population"</span><span class="p">,</span>
+        <span class="s2">"Share of Asian Population"</span><span class="p">,</span>
+        <span class="s2">"Share of Other Race Population"</span><span class="p">,</span>
+        <span class="s2">"Share of Hispanic or Latino Population"</span><span class="p">,</span>
+    <span class="p">],</span>
+    <span class="n">dtype</span><span class="o">=</span><span class="p">{</span>
+        <span class="s2">"state"</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
+        <span class="s2">"county"</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
+        <span class="s2">"tract"</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
+        <span class="s2">"Share of White Population"</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">float32</span><span class="p">,</span>
+        <span class="s2">"Share of Black Population"</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">float32</span><span class="p">,</span>
+        <span class="s2">"Share of American Indian and Alaska Native Population"</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">float32</span><span class="p">,</span>
+        <span class="s2">"Share of Asian Population"</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">float32</span><span class="p">,</span>
+        <span class="s2">"Share of Other Race Population"</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">float32</span><span class="p">,</span>
+        <span class="s2">"Share of Hispanic or Latino Population"</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">float32</span><span class="p">,</span>
+    <span class="p">},</span>
+<span class="p">)</span>
+<span class="n">shares_pop</span><span class="o">.</span><span class="n">columns</span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell-outputWrapper">
+<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
+</div>
+<div class="jp-OutputArea jp-Cell-outputArea">
+<div class="jp-OutputArea-child jp-OutputArea-executeResult">
+<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[ ]:</div>
+<div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
+<pre>Index(['state', 'county', 'tract', 'Share of White Population',
+       'Share of Black Population',
+       'Share of American Indian and Alaska Native Population',
+       'Share of Asian Population', 'Share of Other Race Population',
+       'Share of Hispanic or Latino Population'],
+      dtype='object')</pre>
+</div>
+</div>
+</div>
+</div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -7731,8 +7787,8 @@ Name: tract, dtype: object</pre>
 <td>0.000377</td>
 <td>2.696204e-06</td>
 <td>0.000008</td>
-<td>0.000031</td>
-<td>0.000058</td>
+<td>3.055698e-06</td>
+<td>0.000004</td>
 <td>0.000008</td>
 </tr>
 <tr>
@@ -7741,7 +7797,7 @@ Name: tract, dtype: object</pre>
 <td>0.000369</td>
 <td>1.258228e-06</td>
 <td>0.000017</td>
-<td>0.000002</td>
+<td>7.189876e-07</td>
 <td>0.000019</td>
 <td>0.000004</td>
 </tr>
@@ -7751,7 +7807,7 @@ Name: tract, dtype: object</pre>
 <td>0.000584</td>
 <td>5.032914e-06</td>
 <td>0.000007</td>
-<td>0.000023</td>
+<td>2.336710e-06</td>
 <td>0.000015</td>
 <td>0.000013</td>
 </tr>
@@ -7761,7 +7817,7 @@ Name: tract, dtype: object</pre>
 <td>0.000491</td>
 <td>2.696204e-06</td>
 <td>0.000025</td>
-<td>0.000000</td>
+<td>0.000000e+00</td>
 <td>0.000008</td>
 <td>0.000007</td>
 </tr>
@@ -7771,7 +7827,7 @@ Name: tract, dtype: object</pre>
 <td>0.000335</td>
 <td>7.189876e-07</td>
 <td>0.000000</td>
-<td>0.000025</td>
+<td>2.516457e-06</td>
 <td>0.000003</td>
 <td>0.000002</td>
 </tr>
@@ -7791,18 +7847,18 @@ Name: tract, dtype: object</pre>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># Merge data and race_shares using census tract</span>
-<span class="n">data</span> <span class="o">=</span> <span class="n">data</span><span class="o">.</span><span class="n">merge</span><span class="p">(</span><span class="n">race_shares</span><span class="p">,</span> <span class="n">on</span><span class="o">=</span><span class="s2">"tract"</span><span class="p">,</span> <span class="n">how</span><span class="o">=</span><span class="s2">"left"</span><span class="p">)</span>
+<span class="n">data</span> <span class="o">=</span> <span class="n">data</span><span class="o">.</span><span class="n">merge</span><span class="p">(</span><span class="n">shares_pop</span><span class="p">,</span> <span class="n">on</span><span class="o">=</span><span class="p">[</span><span class="s2">"state"</span><span class="p">,</span><span class="s2">"county"</span><span class="p">,</span><span class="s2">"tract"</span><span class="p">],</span> <span class="n">how</span><span class="o">=</span><span class="s2">"left"</span><span class="p">)</span>
 
 <span class="c1"># Rename race_shares columns</span>
 <span class="n">names_race_shares</span> <span class="o">=</span> <span class="p">{</span>
-        <span class="s2">"white_share_state"</span><span class="p">:</span> <span class="s2">"Share of white population"</span><span class="p">,</span>
-        <span class="s2">"black_share_state"</span><span class="p">:</span> <span class="s2">"Share of black population"</span><span class="p">,</span>
-        <span class="s2">"am_indian_alaska_native_share_state"</span><span class="p">:</span> <span class="s2">"Share of American Indian or Alaska Native population"</span><span class="p">,</span>
-        <span class="s2">"asian_share_state"</span><span class="p">:</span> <span class="s2">"Share of Asian population"</span><span class="p">,</span>
-        <span class="s2">"other_race_share_state"</span><span class="p">:</span> <span class="s2">"Share of Other Race population"</span><span class="p">,</span>
-        <span class="s2">"hispanic_latino_share_state"</span><span class="p">:</span> <span class="s2">"Share of Hispanic or Latino population"</span><span class="p">,</span>
+    <span class="s1">'Share of White Population'</span><span class="p">:</span> <span class="s2">"Share of White population"</span><span class="p">,</span>
+    <span class="s1">'Share of Black Population'</span><span class="p">:</span> <span class="s2">"Share of Black population"</span><span class="p">,</span>
+    <span class="s1">'Share of American Indian and Alaska Native Population'</span><span class="p">:</span> <span class="s2">"Share of American Indian or Alaska Native population"</span><span class="p">,</span>
+    <span class="s1">'Share of Asian Population'</span><span class="p">:</span> <span class="s2">"Share of Asian population"</span><span class="p">,</span>
+    <span class="s1">'Share of Other Race Population'</span><span class="p">:</span> <span class="s2">"Share of Other Race population"</span><span class="p">,</span>
+    <span class="s1">'Share of Hispanic or Latino Population'</span><span class="p">:</span> <span class="s2">"Share of Hispanic or Latino population"</span><span class="p">,</span>
 <span class="p">}</span>
-
+       
 <span class="n">share_variables</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">names_race_shares</span><span class="o">.</span><span class="n">values</span><span class="p">())</span>
 
 <span class="n">data</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="n">names_race_shares</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
@@ -7934,12 +7990,12 @@ Poverty Status                                        0.10        (0.09)
 Commute Time                                          0.92        (0.04)
 Without Health Insurance                              0.01        (0.01)
 Population Density                                    0.12        (0.17)
-Share of white population                             0.00        (0.00)
-Share of black population                             0.00        (0.00)
-Share of American Indian or Alaska Native popul...    0.00        (0.00)
-Share of Asian population                             0.00        (0.00)
-Share of Other Race population                        0.00        (0.00)
-Share of Hispanic or Latino population                0.00        (0.00)
+Share of White population                             0.80        (0.18)
+Share of Black population                             0.06        (0.10)
+Share of American Indian or Alaska Native popul...    0.01        (0.04)
+Share of Asian population                             0.05        (0.07)
+Share of Other Race population                        0.03        (0.02)
+Share of Hispanic or Latino population                0.05        (0.06)
 </pre>
 </div>
 </div>
